# logparsely

./: .gitignore  Cargo.toml  NULL  README.md  setup.bat
src/: cli.rs  concurrency_helper.rs  ingestion.rs  main.rs  storage.rs
