[package]
name = "logparsely"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde_json = "1.0.108"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
